--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: #121212;
+      background: #000000;
       color: #fff;
     }
+    * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
     .gallery {
       display: grid;
