--- a/index.html
+++ b/index.html
@@ -274,38 +274,49 @@ nav {
     <h3>Similar Items</h3>
     <div class="similar-items" id="similar-items"></div>
   </div>
-</div>
-
-<script>
+</div><script>
   const gallery = document.getElementById('gallery');
   const modal = document.getElementById('modal');
   const modalImg = document.getElementById('modal-img');
   const modalDesc = document.getElementById('modal-desc');
-  const similarItems = document.getElementById('similar-items');
   const closeBtn = document.getElementById('close');
   const loadingDiv = document.getElementById('loading');
   
-  let page = 1;
   const perFetch = 12;
   let loading = false;
   let query = 'technology';
   
+  // Detect backend URL automatically
+  const BACKEND_URL = window.location.hostname.includes('localhost')
+    ? 'http://localhost:5500'
+    : 'https://iv-blue.vercel.app';
+  
+  // Shuffle array helper
+  function shuffleArray(array) {
+    return array.sort(() => Math.random() - 0.5);
+  }
+  
   // Fetch images from backend
-  async function fetchImages(query, count = 12) {
-    loading = true;
+  async function fetchImages(query, count = perFetch) {
     loadingDiv.style.display = 'block';
-    const res = await fetch(`http://localhost:5000/api/images?query=${query}&count=${count}`);
-    const data = await res.json();
-    loading = false;
-    loadingDiv.style.display = 'none';
-    return data;
+    try {
+      const res = await fetch(`${BACKEND_URL}/api/images?query=${query}&count=${count}`);
+      const data = await res.json();
+      return data;
+    } catch (err) {
+      console.error('Failed to fetch images:', err);
+      return [];
+    } finally {
+      loadingDiv.style.display = 'none';
+    }
   }
   
   // Load gallery
   async function loadGallery() {
     if (loading) return;
+    loading = true;
     const images = await fetchImages(query, perFetch);
-    images.forEach(img => {
+    shuffleArray(images).forEach(img => {
       const imageElem = document.createElement('img');
       imageElem.src = img.urls.regular;
       imageElem.alt = img.alt_description || 'Unsplash Image';
@@ -313,6 +324,7 @@ nav {
       imageElem.addEventListener('click', () => openModal(img));
       gallery.appendChild(imageElem);
     });
+    loading = false;
   }
   
   // Open modal
@@ -320,8 +332,6 @@ nav {
     modal.style.display = 'flex';
     modalImg.src = img.urls.regular;
     modalDesc.textContent = img.alt_description || 'No description available';
-    similarItems.innerHTML = '';
-    // Optional: fetch similar items if needed
   }
   
   // Close modal
