--- a/index.html
+++ b/index.html
@@ -354,5 +354,9 @@ nav {
   
   <!-- Linking JavaScript file -->
   <script src="server.js"></script>
+  
+    <!-- Linking JavaScript file -->
+  <script src="api/image.js"></script>
+  
 </body>
 </html>
