--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@ nav {
     <h3>Similar Items</h3>
     <div class="similar-items" id="similar-items"></div>
   </div>
-</div><script>
+</div>
+<script>
   const gallery = document.getElementById('gallery');
   const modal = document.getElementById('modal');
   const modalImg = document.getElementById('modal-img');
