--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ nav {
   <script src="server.js"></script>
   
     <!-- Linking JavaScript file -->
-  <script src="api/image.js"></script>
+  <script src="api/images.js"></script>
   
 </body>
 </html>
