--- a/index.html
+++ b/index.html
@@ -170,17 +170,14 @@
 }
 
 nav {
+  width: 100%;
   position: fixed;
   top: 0;
-  display: none;
-  justify-content: space-between;
-  align-items: center;
-  padding: .6rem 1rem;
-  width: 100%;
   z-index: 1000;
   background: #0000007c;
   backdrop-filter: blur(10px);
-  
+  display: flex;
+  flex-direction: column; /* stack navcontent and category-bar */
 }
 
 .logo {
@@ -249,16 +246,16 @@ nav {
   gap: 1rem;
 }
 
+
+/* Category Bar full width under navcontent */
 .category-bar {
   display: flex;
   gap: 15px;
   overflow-x: auto;
- padding:0 10px;
+  padding: 0.5rem 1rem;
   background: #000;
-  position: sticky;
-  top: 0px; /* stays below navbar */
-  z-index: 900;
-  scrollbar-width: none; /* Firefox */
+  width: 100%;
+  scrollbar-width: none;
 }
 
 .category-bar::-webkit-scrollbar {
@@ -289,51 +286,69 @@ nav {
   color: white;
 }
 
+
+/* Nav main row */
+.navcontent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .6rem 1rem;
+  width: 100%;
+}
+
+
+
   </style>
 </head>
 <body>
 
   <nav>
-    <div class="logo"><img src="assets/H4.svg" alt=""></div>
-    <div class="nav-links">
-      <a href="#">Work</a>
-      <a href="about.html">About</a>
-      <a href="#">Services</a>
-    </div>
-
-    <div class="right">
+    <div class="navcontent">
+      <div class="logo"><img src="assets/H4.svg" alt="Logo"></div>
+      
+      <div class="nav-links">
+        <a href="#">Work</a>
+        <a href="about.html">About</a>
+        <a href="#">Services</a>
+      </div>
+  
+      <div class="right">
         <button class="talk">Let's Talk</button>
-
-    <a href="https://www.instagram.com/wandile_010"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
-        style="fill:#FFFFFF;">
-        <path d="M 16.5 5 C 10.16639 5 5 10.16639 5 16.5 L 5 31.5 C 5 37.832757 10.166209 43 16.5 43 L 31.5 43 C 37.832938 43 43 37.832938 43 31.5 L 43 16.5 C 43 10.166209 37.832757 5 31.5 5 L 16.5 5 z M 16.5 8 L 31.5 8 C 36.211243 8 40 11.787791 40 16.5 L 40 31.5 C 40 36.211062 36.211062 40 31.5 40 L 16.5 40 C 11.787791 40 8 36.211243 8 31.5 L 8 16.5 C 8 11.78761 11.78761 8 16.5 8 z M 34 12 C 32.895 12 32 12.895 32 14 C 32 15.105 32.895 16 34 16 C 35.105 16 36 15.105 36 14 C 36 12.895 35.105 12 34 12 z M 24 14 C 18.495178 14 14 18.495178 14 24 C 14 29.504822 18.495178 34 24 34 C 29.504822 34 34 29.504822 34 24 C 34 18.495178 29.504822 14 24 14 z M 24 17 C 27.883178 17 31 20.116822 31 24 C 31 27.883178 27.883178 31 24 31 C 20.116822 31 17 27.883178 17 24 C 17 20.116822 20.116822 17 24 17 z"></path>
-        </svg></a>
+        <a href="https://www.instagram.com/wandile_010"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"
+          style="fill:#FFFFFF;">
+          <path d="M 16.5 5 C 10.16639 5 5 10.16639 5 16.5 L 5 31.5 C 5 37.832757 10.166209 43 16.5 43 L 31.5 43 C 37.832938 43 43 37.832938 43 31.5 L 43 16.5 C 43 10.166209 37.832757 5 31.5 5 L 16.5 5 z M 16.5 8 L 31.5 8 C 36.211243 8 40 11.787791 40 16.5 L 40 31.5 C 40 36.211062 36.211062 40 31.5 40 L 16.5 40 C 11.787791 40 8 36.211243 8 31.5 L 8 16.5 C 8 11.78761 11.78761 8 16.5 8 z M 34 12 C 32.895 12 32 12.895 32 14 C 32 15.105 32.895 16 34 16 C 35.105 16 36 15.105 36 14 C 36 12.895 35.105 12 34 12 z M 24 14 C 18.495178 14 14 18.495178 14 24 C 14 29.504822 18.495178 34 24 34 C 29.504822 34 34 29.504822 34 24 C 34 18.495178 29.504822 14 24 14 z M 24 17 C 27.883178 17 31 20.116822 31 24 C 31 27.883178 27.883178 31 24 31 C 20.116822 31 17 27.883178 17 24 C 17 20.116822 20.116822 17 24 17 z"></path>
+          </svg></a>
         <a href="https://www.x.com/@Rxch_010"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 30 30"
-            style="fill:#FFFFFF;">
-            <path d="M26.37,26l-8.795-12.822l0.015,0.012L25.52,4h-2.65l-6.46,7.48L11.28,4H4.33l8.211,11.971L12.54,15.97L3.88,26h2.65 l7.182-8.322L19.42,26H26.37z M10.23,6l12.34,18h-2.1L8.12,6H10.23z"></path>
-            </svg></a>
-</div>
-
-
+          style="fill:#FFFFFF;">
+          <path d="M26.37,26l-8.795-12.822l0.015,0.012L25.52,4h-2.65l-6.46,7.48L11.28,4H4.33l8.211,11.971L12.54,15.97L3.88,26h2.65 l7.182-8.322L19.42,26H26.37z M10.23,6l12.34,18h-2.1L8.12,6H10.23z"></path>
+          </svg></a>
+      </div>
+    </div>
+  
+    <!-- Category Bar now outside navcontent -->
+    <div class="category-bar">
+      <button class="category-btn active" data-category="technology">Technology</button>
+      <button class="category-btn" data-category="nature">Nature</button>
+      <button class="category-btn" data-category="people">People</button>
+      <button class="category-btn" data-category="architecture">Architecture</button>
+      <button class="category-btn" data-category="animals">Animals</button>
+      <button class="category-btn" data-category="travel">Travel</button>
+      <button class="category-btn" data-category="fashion">Fashion</button>
+      <button class="category-btn" data-category="sports">Sports</button>
+      <button class="category-btn" data-category="food">Food</button>
+    </div>
   </nav>
+
+
   <!-- Horizontal Category Scroll Bar -->
-<div class="category-bar">
-  <button class="category-btn active" data-category="technology">Technology</button>
-  <button class="category-btn" data-category="nature">Nature</button>
-  <button class="category-btn" data-category="people">People</button>
-  <button class="category-btn" data-category="architecture">Architecture</button>
-  <button class="category-btn" data-category="animals">Animals</button>
-  <button class="category-btn" data-category="travel">Travel</button>
-  <button class="category-btn" data-category="fashion">Fashion</button>
-  <button class="category-btn" data-category="sports">Sports</button>
-  <button class="category-btn" data-category="food">Food</button>
-</div>
+
 
   <!-- Bottom Navigation -->
   <div class="bottom-nav">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#career">Career</a>
+    <a href="#home"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg></a>
+    <a href="#about"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg></a>
+    <a href="#about"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M80-120v-650l200-150 200 150v90h400v560H80Zm80-80h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm0-160h80v-80h-80v80Zm160 0h80v-80h-80v80Zm0 480h480v-400H320v400Zm240-240v-80h160v80H560Zm0 160v-80h160v80H560ZM400-440v-80h80v80h-80Zm0 160v-80h80v80h-80Z"/></svg></a>
+    <a href="#career"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q83 0 155.5 31.5t127 86q54.5 54.5 86 127T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Zm0-82q26-36 45-75t31-83H404q12 44 31 83t45 75Zm-104-16q-18-33-31.5-68.5T322-320H204q29 50 72.5 87t99.5 55Zm208 0q56-18 99.5-55t72.5-87H638q-9 38-22.5 73.5T584-178ZM170-400h136q-3-20-4.5-39.5T300-480q0-21 1.5-40.5T306-560H170q-5 20-7.5 39.5T160-480q0 21 2.5 40.5T170-400Zm216 0h188q3-20 4.5-39.5T580-480q0-21-1.5-40.5T574-560H386q-3 20-4.5 39.5T380-480q0 21 1.5 40.5T386-400Zm268 0h136q5-20 7.5-39.5T800-480q0-21-2.5-40.5T790-560H654q3 20 4.5 39.5T660-480q0 21-1.5 40.5T654-400Zm-16-240h118q-29-50-72.5-87T584-782q18 33 31.5 68.5T638-640Zm-234 0h152q-12-44-31-83t-45-75q-26 36-45 75t-31 83Zm-200 0h118q9-38 22.5-73.5T376-782q-56 18-99.5 55T204-640Z"/></svg></a>
   </div>
 
 <div class="gallery" id="gallery"></div>
@@ -354,7 +369,7 @@ nav {
   <!-- Linking JavaScript file -->
   <script >
 
-    const pexelsKey = 'VzvQE3vRaKJI6GdXsvNYMNidtB3NMRMHawJwemyUeARPxf5wfS90taTL';
+const pexelsKey = 'VzvQE3vRaKJI6GdXsvNYMNidtB3NMRMHawJwemyUeARPxf5wfS90taTL';
 const pixabayKey = '51945110-c9ce4fbb288952085fb9e444f';
 const unsplashKey = 'rp9_shDmKuIKGdLrL6g0l7-vvAWYuf2RTSa717SRuM0';
 
