--- a/index.html
+++ b/index.html
@@ -18,26 +18,49 @@
   box-sizing: border-box;
 }
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      padding-bottom: 120px; /* To avoid overlap with bottom nav */
-    }
+.gallery {
+  column-count: 4; /* Default for large screens */
+  column-gap: 8px;
+  padding: 16px;
+  padding-bottom: 120px; /* Avoid overlap with bottom nav */
+}
 
-    .gallery img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-      cursor: pointer;
-      border-radius: 0;
-      transition: transform 0.2s;
-    }
+.gallery img {
+  width: 100%;
+  margin-bottom: 16px;
+  display: block;
+  break-inside: avoid; /* Prevent breaking between columns */
+  border-radius: 4px;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
 
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
+/* For tablets */
+@media (max-width: 1024px) {
+  .gallery {
+    column-count: 3;
+  }
+}
+
+/* For small devices */
+@media (max-width: 768px) {
+  .gallery {
+    column-count: 2;
+  }
+}
+
+/* For very small devices */
+@media (max-width: 480px) {
+  .gallery {
+    column-count: 2; /* Keep 2 columns for mobile */
+  }
+}
+
 
     /* Modal */
     .modal {
@@ -81,7 +104,7 @@
       width: 100px;
       height: 100px;
       object-fit: cover;
-      border-radius: 6px;
+      border-radius: 2px;
       cursor: pointer;
     }
 
@@ -97,6 +120,7 @@
     /* Bottom nav container */
     .bottom-nav {
       position: fixed;
+      display:none; /* Hidden by default */
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
@@ -140,15 +164,17 @@
       color: #ccc;
     }
     .load-more {
-  display: none;
-  margin: 20px auto;
-  background: #ffcc00;
-  color: #000;
-  border: none;
+
+  margin: auto;
+  background: #000000;
+  color: #fff;
+  border: 1px solid white;
   padding: 12px 24px;
+  width:80vw;
+
   font-size: 16px;
-  font-weight: 600;
-  border-radius: 30px;
+  font-weight: 500;
+  border-radius: 6px;
   cursor: pointer;
   transition: background 0.3s ease;
 }
@@ -252,8 +278,8 @@ nav {
   display: flex;
   gap: 15px;
   overflow-x: auto;
-  padding: 0.5rem 1rem;
-  background: #000;
+  padding: 0rem 1rem;
+  background: transparent;
   width: 100%;
   scrollbar-width: none;
 }
@@ -292,7 +318,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: .6rem 1rem;
+  padding: 0rem 1rem;
   width: 100%;
 }
 
