--- a/index.html
+++ b/index.html
@@ -64,64 +64,62 @@
 }
 
 
-/* Modal */
+/* Modal Overlay */
 .modal {
+  display: none; /* Hidden by default */
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255,255,255,0.85);
-  display: none;
+  background: rgba(255, 255, 255,1);
   justify-content: center;
   align-items: center;
-  z-index: 10000;
   overflow-y: auto;
   padding: 20px;
+  color: black;
+  z-index: 10000;
 }
 
+/* Modal Content */
 .modal-content {
   max-width: 900px;
   width: 100%;
-  background: #f2f2f2;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 10px 40px rgba(0,0,0,0.5);
-  text-align: center;
+  margin: auto;
+  text-align: left;
+  position: relative;
 }
 
+/* Modal Image */
 .modal-content img {
   width: 100%;
-  border-radius: 8px;
-  margin-bottom: 12px;
+  max-height: 70vh;
+  object-fit: contain;
+  border-radius: 0px;
 }
 
-.modal-content h3 {
-  color: #000;
-  text-align: left;
-  font-size: 18px;
-  margin-bottom: 12px;
+/* Description Text */
+.description {
+  margin: 12px 0;
+  font-size: 16px;
+  color: #1a1a1a;
 }
 
-.modal-content .description {
-  color: #ddd;
-  font-size: 14px;
-  margin-bottom: 16px;
-  text-align: left;
-}
-
-/* Similar items */
+/* Similar Items */
 .similar-items {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
   gap: 10px;
+  justify-content: center;
+  margin-top: 15px;
 }
 
 .similar-items img {
-  width: 100%;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
   border-radius: 6px;
   cursor: pointer;
-  transition: transform 0.2s ease;
+  transition: transform 0.2s;
 }
 
 .similar-items img:hover {
@@ -131,18 +129,18 @@
 /* Close Button */
 .close {
   position: absolute;
-  top: 12px;
+  top: 15px;
   right: 20px;
-  font-size: 28px;
+  font-size: 36px;
   color: #fff;
+  font-weight: bold;
   cursor: pointer;
-  transition: color 0.2s ease;
+  transition: color 0.2s;
 }
 
 .close:hover {
-  color: #f2f2f2;
+  color: #ffcc00;
 }
-
 
 
     /* Bottom nav container */
@@ -479,7 +477,7 @@ nav {
 
 
 <div class="modal" id="modal">
-  <span class="close" id="close"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000"><path d="M256-213.85 213.85-256l224-224-224-224L256-746.15l224 224 224-224L746.15-704l-224 224 224 224L704-213.85l-224-224-224 224Z"/></svg></span>
+  <span class="close" id="close"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M256-213.85 213.85-256l224-224-224-224L256-746.15l224 224 224-224L746.15-704l-224 224 224 224L704-213.85l-224-224-224 224Z"/></svg></span>
   <div class="modal-content">
     <img id="modal-img" src="" alt="">
     <div class="description" id="modal-desc"></div>
@@ -598,7 +596,7 @@ nav {
     function openModal(url, photographer, source) {
         const modal = document.getElementById('modal');
         document.getElementById('modal-img').src = url;
-        document.getElementById('modal-desc').innerText = `${photographer} `;
+        document.getElementById('modal-desc').innerText = `${photographer} (${source})`;
         
         // Similar Items (4 random)
         const similarContainer = document.getElementById('similar-items');
