--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
 /* Description Text */
 .description {
   margin: 12px 0;
+  font-weight: 500;
   font-size: 16px;
   color: #1a1a1a;
+  font-family: 'Inter', sans-serif;
 }
 
 /* Similar Items */
@@ -111,6 +113,7 @@
   gap: 10px;
   justify-content: center;
   margin-top: 15px;
+  font-family: 'Inter', sans-serif;
 }
 
 .similar-items img {
@@ -383,8 +386,13 @@ nav {
   right: 8px;
   background: rgba(0,0,0,0.6);
   color: #fff;
-  padding: 6px;
-  border-radius: 50%;
+  padding: 0px;
+  height: 30px;
+  width:30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
   font-size: 18px;
   text-decoration: none;
   cursor: pointer;
@@ -481,7 +489,7 @@ nav {
   <div class="modal-content">
     <img id="modal-img" src="" alt="">
     <div class="description" id="modal-desc"></div>
-    <h3>Similar Items</h3>
+    <p>Similar Items</p>
     <div class="similar-items" id="similar-items"></div>
   </div>
 </div>
@@ -550,7 +558,7 @@ nav {
             <a href="${img.url}" download="${img.photographer || 'image'}.jpg" class="download-icon" title="Download">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-328.46 309.23-499.23l42.16-43.38L450-444v-336h60v336l98.61-98.61 42.16 43.38L480-328.46ZM252.31-180Q222-180 201-201q-21-21-21-51.31v-108.46h60v108.46q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85h455.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46v-108.46h60v108.46Q780-222 759-201q-21 21-51.31 21H252.31Z"/></svg>
             </a>
-            <p>${img.photographer} <small>(${img.source})</small></p>
+            <p>${img.photographer} </p>
           </div>
         `).join('');
     
