--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
 .description {
   margin: 12px 0;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   color: #1a1a1a;
   font-family: 'Inter', sans-serif;
+  text-transform: uppercase;
 }
 
 /* Similar Items */
@@ -112,7 +113,8 @@
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
-  margin-top: 15px;
+  margin-top: 20px;
+  text-transform: uppercase;
   font-family: 'Inter', sans-serif;
 }
 
